--- a/freeCodeCamp/pythonForEverybody/ıterationsD.ipynb
+++ b/freeCodeCamp/pythonForEverybody/ıterationsD.ipynb
@@ -261,6 +261,133 @@
         "- Loop idioms\n",
         "- Largest or smallest"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "blSe_ZLP8Rkt",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Exercises"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rO3p55sp8TgU",
+        "colab_type": "text"
+      },
+      "source": [
+        "Exercise 1\n",
+        "\n",
+        "Write a program which repeatedly reads numbers until the user enters “done”. Once “done” is entered, print out the total, count, and average of the numbers. If the user enters anything other than a number, detect their mistake using try and except and print an error message and skip to the next number."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TjDil1pv_rX0",
+        "colab_type": "text"
+      },
+      "source": [
+        "istenilen çıktı: \n",
+        "\n",
+        "Enter a number: 4\n",
+        "\n",
+        "Enter a number: 5\n",
+        "\n",
+        "Enter a number: bad data\n",
+        "\n",
+        "Invalid input\n",
+        "\n",
+        "Enter a number: 7\n",
+        "\n",
+        "Enter a number: done\n",
+        "\n",
+        "16 3 5.333333333333333"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C6-S7GUC8pOM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 134
+        },
+        "outputId": "24e343e1-336f-4757-ad50-fc02e36f05f2"
+      },
+      "source": [
+        "number = 0\n",
+        "count = 0\n",
+        "while True:\n",
+        "  try:\n",
+        "    usernum = input('Enter a number: ')\n",
+        "    if usernum == 'done':\n",
+        "      print(number,count,number/count)\n",
+        "      break\n",
+        "    number += int(usernum)\n",
+        "    count += 1\n",
+        "  except:\n",
+        "    print('Invalid input')"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter a number: 4\n",
+            "Enter a number: 5\n",
+            "Enter a number: bad data\n",
+            "Invalid input\n",
+            "Enter a number: 7\n",
+            "Enter a number: done\n",
+            "16 3 5.333333333333333\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WDH4ybNRALR5",
+        "colab_type": "text"
+      },
+      "source": [
+        "Öğretmenin yaptığı:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o2TIidMSAOtQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "num = 0\n",
+        "tot = 0.0\n",
+        "while True:\n",
+        "  sval = input('Enter a number: ')\n",
+        "  if sval == 'done':\n",
+        "    break\n",
+        "  try:\n",
+        "    fval = float(sval)\n",
+        "  except:\n",
+        "    print('Invalid input')\n",
+        "    continue\n",
+        "  # print(fval)\n",
+        "  num = num + 1\n",
+        "  tot = tot + fval\n",
+        "\n",
+        "# print('All Done)\n",
+        "print(tot,num,tot/num)"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
